[package]
name = "casino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb8-redis = "0.10"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11.8", features = ["cookies", "json"] }
hyper = { version = "0.14", features = ["http1", "server"] }
lazy_static = "1.4"
route-recognizer = "0.3"
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tokio = { version = "1.15", features = ["full"] }

[features]
stub = []
