[package]
name = "collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
reqwest = { version = "0.11.8", features = ["cookies"] }
lazy_static = "1.4"
scraper = "0.12"
tokio = { version = "1.15", features = ["full"] }
