[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aggregator"

[dependencies]
bb8-redis = "0.12"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive", "env"] }
futures-util = "0.3"
hyper = { version = "0.14", features = ["http1", "server"] }
hyper-tungstenite = "0.8"
lazy_static = "1.4"
log = "0.4"
redis = { version = "0.22", features = [] }
regex = "1"
reqwest = { version = "0.11.12", features = ["cookies", "json", "stream"] }
route-recognizer = "0.3"
scraper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.1"
serde_json = "1.0"
serde_repr = "0.1"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.21", features = ["fs", "io-std", "net", "rt-multi-thread", "process", "signal", "macros"] }

csgofloat = { path = "../csgofloat" }
logging = { path = "../logging" }
steam = { path = "../steam", features = ["backend"] }
store = { path = "../store" }
