[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aggregator"

[dependencies]
axum = { version = "0.6.0", features = ["default", "headers", "json", "ws"] }
bb8-redis = "0.12"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive", "env"] }
futures-util = "0.3"
headers = "0.3.8"
hyper = "0.14"
log = "0.4"
redis = { version = "0.22", features = [] }
regex = "1"
reqwest = { version = "0.11.12", features = ["cookies", "json", "stream"] }
scraper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.1"
serde_json = "1.0"
serde_repr = "0.1"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.21", features = ["fs", "io-std", "net", "rt-multi-thread", "process", "signal", "macros"] }

csgofloat = { path = "../csgofloat" }
logging = { path = "../logging" }
steam = { path = "../steam", features = ["backend"] }
store = { path = "../store" }
