[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"

[dependencies]
clap = "2.34"
reqwest = { version = "0.11.8" }
lazy_static = "1.4"
log = "0.4"
tokio = { version = "1.15", features = ["fs", "io-std", "rt-multi-thread", "macros", "process"] }

logging = { path = "../logging" }
steam = { path = "../steam", features = [] }
