[package]
name = "csgofloat"
version = "0.1.0"
edition = "2021"

[dependencies]
bb8-redis = "0.12"
log = "0.4"
reqwest = { version = "0.11.12", features = ["cookies", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"

cache = { path = "../cache" }
