[package]
name = "steam"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
bb8-redis = { version = "0.12", optional = true }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
lazy_static = "1.4"
log = "0.4"
percent-encoding = "2.1"
regex = "1"
reqwest = { version = "0.11.12" }
scraper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.0"
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"

cache = { path = "../cache", optional = true }
csgofloat = { path = "../csgofloat", optional = true }

[features]
default = []
backend = ["cache", "csgofloat", "bb8-redis"]
